<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e3f2fd"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/name_top_margin"
                android:text="@string/text_name"
                android:textColor="@color/colorName"
                android:textSize="@dimen/what_name_size" />
            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit"
                android:inputType="textCapWords" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="centerCrop"
                android:src="@drawable/alcol"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/display_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/name_top_margin"
                    android:text="@string/text_scor"
                    android:textColor="@color/colorName"
                    android:textSize="@dimen/text_size" />
                <TextView
                    android:id="@+id/score_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:layout_marginTop="@dimen/name_top_margin"
                    android:text="@string/text_score"
                    android:textColor="@color/colorName"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/name_top_margin"
                android:text="@string/Quiz"
                android:textColor="@color/colorName"
                android:textSize="@dimen/text_size" />
            <CheckBox
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/check_marginT"
                android:text="@string/check_box_text" />
            <CheckBox
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/check_marginT"
                android:text="@string/check_box_text2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/text_view_title"
                android:textColor="@color/colorName"
                android:textSize="@dimen/text_size_title" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_button_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/radio_text1" />
                <RadioButton
                    android:id="@+id/radio_button_death2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_text2" />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/text_title2"
                android:textColor="@color/colorName"
                android:textSize="@dimen/text_size_title" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_violence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/radio_answer" />
                <RadioButton
                    android:id="@+id/radio_domestic_violence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/domestic_violence_radio" />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/cance_title"
                android:textColor="@color/colorName"
                android:textSize="@dimen/text_size_title" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_cancer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/cancer_radio" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/cancer_radio2" />
            </RadioGroup>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="newScore"
                android:text="@string/submit_button" />
        </LinearLayout>
    </ScrollView>